usecaseの導入
