# src/domain/model/message.go
@@ -1,0 +1,11 @@
+package model
+
+import "time"
+
+type Message struct {
+	ID        int64     `db:"id"`
+	Name      string    `db:"name"`
+	Message   string    `db:"message"`
+	CreatedAt time.Time `db:"created_at"`
+	UpdatedAt time.Time `db:"updated_at"`
+}
